fix: spacing & font

--- a/src/App/ui/Components/Form/FormComponent.scss
+++ b/src/App/ui/Components/Form/FormComponent.scss
@@ -103,7 +103,7 @@
       background: linear-gradient(86.01deg, #00f4e2 0%, #00ff7f 100%);
       border-radius: 4px;
       padding: 4px 8px;
-      font-family: BR Sonoma;
+     
       font-size: 16px;
       font-weight: 700;
       letter-spacing: 0.4px;
@@ -137,7 +137,6 @@
   gap: 8px;
 
   label {
-    font-family: BR Sonoma;
     font-size: 20px;
     font-weight: 700;
     line-height: 24px;
@@ -163,7 +162,6 @@
 
     label {
       justify-content: center;
-      font-family: BR Sonoma;
       font-size: 12px;
       font-weight: 400;
       line-height: 20px;
@@ -182,7 +180,6 @@
 
     label {
       justify-content: flex-start;
-      font-family: BR Sonoma;
       font-size: 12px;
       font-weight: 400;
       line-height: 20px;
@@ -199,7 +196,6 @@
       color: #000;
       text-decoration: underline;
       cursor: pointer;
-      font-family: BR Sonoma;
       font-size: 12px;
       font-weight: 600;
       line-height: 20px;
