--- a/src/App/ui/Components/Header/HeaderComponent.scss
+++ b/src/App/ui/Components/Header/HeaderComponent.scss
@@ -40,7 +40,6 @@
       }
     }
     &__number{
-      font-family: BR Sonoma;
       font-size: 18px;
       font-weight: 700;
       line-height: 20px;
