--- a/src/App/ui/Components/Menu/MenuComponent.scss
+++ b/src/App/ui/Components/Menu/MenuComponent.scss
@@ -29,7 +29,7 @@
       color: #141938;
       font-weight: 700;
       line-height: 24px;
-      letter-spacing: 0.20000000298023224px;
+      letter-spacing: 0.2px;
     }
     &.resumen {
       font-size: 16px;
@@ -73,7 +73,7 @@
       font-size: 40px;
       font-weight: 700;
       line-height: 48px;
-      letter-spacing: -0.6000000238418579px;
+      letter-spacing: -0.6px;
       text-align: center;
     }
     &.sub {
@@ -81,7 +81,7 @@
       font-size: 16px;
       font-weight: 400;
       line-height: 28px;
-      letter-spacing: 0.10000000149011612px;
+      letter-spacing: 0.1px;
       text-align: center;
     }
   }
@@ -121,7 +121,7 @@
       font-size: 20px;
       font-weight: 900;
       line-height: 28px;
-      letter-spacing: -0.20000000298023224px;
+      letter-spacing: -0.2px;
       text-align: left;
     }
     &.me__sub,
@@ -129,7 +129,7 @@
       font-size: 12px;
       font-weight: 400;
       line-height: 20px;
-      letter-spacing: 0.20000000298023224px;
+      letter-spacing: 0.2px;
       text-align: left;
     }
   }
@@ -171,7 +171,7 @@
       font-size: 24px;
       font-weight: 900;
       line-height: 32px;
-      letter-spacing: -0.20000000298023224px;
+      letter-spacing: -0.2px;
       text-align: left;
     }
     h3 {
@@ -183,7 +183,7 @@
       &.tittle,
       &.initial {
         color: #7981b2;
-        font-family: Lato;
+        
         font-size: 12px;
         line-height: 16px;
         letter-spacing: 0.6px;
