--- a/src/App/ui/views/Resumen/Resumen.scss
+++ b/src/App/ui/views/Resumen/Resumen.scss
@@ -3,7 +3,7 @@
       //
       font-weight: 700;
       line-height: 24px;
-      letter-spacing: 0.20000000298023224px;
+      letter-spacing: 0.2px;
     }
     &.resumen {
       color: #141938;
